added more move data

--- a/src/main/resources/templates/encounterBattle.html
+++ b/src/main/resources/templates/encounterBattle.html
@@ -1,4 +1,7 @@
 <div layout:decorate="~{layout}" layout:fragment="content">
+  <meta name="_csrf" th:content="${_csrf.token}">
+  <meta name="_csrf_header" th:content="${_csrf.headerName}">
+
   <a href="/encounterPath">
     <button class="button is-info">Return to path</button>
   </a>
@@ -6,10 +9,25 @@
   <div class="is-flex is-justify-content-center is-align-items-center mt-3" style="gap: 200px;">
     <div class="fixed-grid" style="width: 400px;">
       <div class="grid">
-        <button class="button" onclick=damage(event) th:data-movename="${activePkmn.allMoves.move1.apiName}">[[${activePkmn.allMoves.move1.displayName}]]</button>
-        <button class="button" onclick=damage(event) th:data-movename="${activePkmn.allMoves.move2.apiName}">[[${activePkmn.allMoves.move2.displayName}]]</button>
-        <button class="button" onclick=damage(event) th:data-movename="${activePkmn.allMoves.move3.apiName}">[[${activePkmn.allMoves.move3.displayName}]]</button>
-        <button class="button" onclick=damage(event) th:data-movename="${activePkmn.allMoves.move4.apiName}">[[${activePkmn.allMoves.move4.displayName}]]</button>
+        <div th:each="moveInfo, iter : ${activePkmn.allMoves.moves}">
+          <div class="is-flex is-flex-direction-column is-align-items-center">
+            <button class="button" onclick=damage(event) th:data-moveidx="${iter.count}">[[${moveInfo.displayName}]]</button>
+            <div class="box field is-grouped is-grouped-multiline">
+              <div class="control">
+                <div class="tags has-addons"><span class="tag is-danger">Power</span><span class="tag">[[${moveInfo.power}]]</span></div>
+              </div>
+              <div class="control">
+                <div class="tags has-addons"><span class="tag is-warning">PP</span><span class="tag">[[${moveInfo.pp}]]</span></div>
+              </div>
+              <div class="control">
+                <div class="tags has-addons"><span class="tag is-info">Accuracy</span><span class="tag">[[${moveInfo.accuracy}]]</span></div>
+              </div>
+              <div class="control">
+                <div class="tags has-addons"><span class="tag is-primary">Damage Class</span><span class="tag">[[${moveInfo.damageClass}]]</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="fixed-grid" style="width: 400px;">
@@ -20,41 +38,36 @@
       </div>
     </div>
     <div th:each="pkmnToFight : ${encounterList}">
-      <div th:replace="~{fragments/pkmnPreview :: pkmnPreview (pkmnInfo=${pkmnToFight}, showHp=true)}"></div>
+      <div th:replace="~{fragments/pkmnPreview :: pkmnPreview (pkmnInfo=${pkmnToFight}, showHp=true, giveIdOfEnemyHp=true)}"></div>
     </div>
   </div>
 </div>
 
 <script th:inline="javascript">
   async function damage(event) {
-    console.log(event.target.dataset.movename)
-    // const token = document.querySelector('meta[name="_csrf"]').content;
-    // const header = document.querySelector('meta[name="_csrf_header"]').content;
-    // let encounterPkmnData = /*[[${encounterPkmn}]]*/ null;
-    // console.log(encounterPkmnData);
-    // const encounter = document.getElementById("encounterPkmn");
-    // const encounterPkmnImgURL = encounter.src;
-    // const pokeBallImgURL =
-    //   "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png";
-    // encounter.src = pokeBallImgURL;
-    // let isCatchSuccessful = await fetch(
-    //   "/tryCatchPkmn",
-    //   {
-    //     method: "POST",
-    //     headers: {
-    //       "Content-Type": "application/json",
-    //       [header]: token
-    //     },
-    //     body: JSON.stringify(encounterPkmnData)
-    //   }
-    // );
-    // let data = await isCatchSuccessful.json();
-    // if (data.catchSuccessful === true) {
-    //   encounter.style.filter = "brightness(50%)";
-    //   document.getElementById("helpText").innerHTML = data.addMsg;
-    //   document.getElementById("catchButton").disabled = true;
-    // } else {
-    //   encounter.src = encounterPkmnImgURL;
-    // }
+    const token = document.querySelector('meta[name="_csrf"]').content;
+    const header = document.querySelector('meta[name="_csrf_header"]').content;
+
+    let moveIdx = event.target.dataset.moveidx;
+    let moveInfo;
+    if(moveIdx == 1) moveInfo = /*[[${activePkmn.allMoves.moves[0]}]]*/ null;
+    else if(moveIdx == 2) moveInfo = /*[[${activePkmn.allMoves.moves[1]}]]*/ null;
+    else if(moveIdx == 3) moveInfo = /*[[${activePkmn.allMoves.moves[2]}]]*/ null;
+    else if(moveIdx == 4) moveInfo = /*[[${activePkmn.allMoves.moves[3]}]]*/ null;
+
+    let battleTurnInfo = await fetch(
+      "/encounter/dealDamage",
+      {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          [header]: token
+        },
+        body: JSON.stringify(moveInfo)
+      }
+    );
+    let data = await battleTurnInfo.json();
+    document.getElementById("enemyHp").innerHTML = data.damage
+    console.log(data);
   }
 </script>
