--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -27,9 +27,9 @@
     <div th:replace="~{fragments/navbar :: navbar}"></div>
     <main
       class="is-flex is-justify-content-center is-align-items-center"
-      style="flex: 1"
+      style="flex: 1; max-width: 100vw;"
     >
-      <div layout:fragment="content">Default content</div>
+      <div style="max-width: 100vw;" layout:fragment="content">Default content</div>
     </main>
     <footer></footer>
 
