--- a/src/main/resources/templates/gyms.html
+++ b/src/main/resources/templates/gyms.html
@@ -9,6 +9,10 @@
           </div>
           <div class="card-content has-text-centered">
             <p class="title is-6" th:text="${gym.name}">Gym Name</p>
+            <div th:if="${completedGymIds != null and completedGymIds.contains(gym.id)}">
+                Completed!
+            </div>
+
             <a th:href="@{/gyms/{id}(id=${gym.id})}" class="button is-info mt-2">View Gym</a>
             <form th:action="@{/gyms/start/{id}(id=${gym.id})}" method="post" class="mt-2">
               <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
