--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -1,18 +1,28 @@
 <div layout:decorate="~{layout}" layout:fragment="content">
   <div th:each="item : ${shopItems}">
-    <div class="box is-flex is-flex-direction-column is-gap-3">
+    <div class="box is-flex is-flex-direction-row is-gap-3">
       <div class="has-text-centered">
-        <span class="icon">
+        <span class="icon" th:if="${item instanceof T(com.PokeScam.PokeScam.DTOs.EnergyDTO)}">
           <i class="fa-solid fa-bolt-lightning fa-4x"></i>
         </span>
       </div>
+      <div>
+        <span>[[${item.name}]]</span>
+      </div>
+      <div>
+        <span>[[${item.description}]]</span>
+      </div>
       <form th:action="@{/buy/{itemId}(itemId=${item.id})}" method="post">
         <button class="button is-info">
-          <span class="icon"><i class="fa-solid fa-dollar-sign"></i>[[${item.price}]]</span>
+          <span class="icon"><i class="fa-solid fa-dollar-sign"></i>[[${item.price}]] </span>
           <span></span>
-          <span class="mx-1">Buy Energy</span>
-          <span class="icon"><i class="fa-solid fa-bolt-lightning"></i>1</span>
+          <span class="mx-1">Buy</span>
         </button>
+        <input  class="input is-small mx-2"
+                type="number"
+                name="amount"
+                min="1"
+                value="1">
       </form>
       </div>
   </div>
